# bio-agent-lab

./: .gitignore  AGENTS.md  AUTONOMOUS_IMPLEMENTATION_PLAN.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CLAUDE_CODE_extraction_refinement.md  CODEX_RUNBOOK.md  CODEX_review_extraction_refinement.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  Launch PBData GUI.bat  Launch PBData WinUI.bat  Launch ProteoSphere GUI.bat  Launch ProteoSphere WinUI.bat  MASTER_PROMPT.txt  Makefile  ProteoSphere_platform_strategy_overview_2026-03-17.pptx  README.md  Run PBData Smoke Check.bat  Run ProteoSphere Smoke Check.bat  STRUCTURE_EXTRACTION_AGENT_SPEC.md  bootstrap_repo.py  expected_outcomes_panel_B.md  expected_outcomes_panel_C.md  expected_outcomes_table.md  pyproject.toml  requirements.txt  stress_test_panel.yaml  stress_test_panel_B.yaml  stress_test_panel_C.yaml
bio_agent_full_spec/: README_PROJECT_OVERVIEW.md
bio_prediction_engine_instruction_pack/: README_PROJECT_OVERVIEW.md
configs/: criteria.yaml  logging.yaml  sources.yaml
data/: .gitignore
docs/: bio_agent_full_scope_architecture.md  bio_agent_full_scope_gap_analysis.md  full_scope_stub_checklist.md  hpc_precompute.md  internal_demo_runbook.md  mcp_stack_recommendations.md  model_studio_backlog.md  release_policy_and_artifacts.md  roadmap_to_fully_usable_platform.md  spec_deviations.md  structural_edge_cases_report.md
handoffs/: 2026-03-09_full_codebase_qa_reviewer.md  2026-03-09_scenario_test_execution_user_tester.md  2026-03-09_spec_compliance_review_architect.md  (+10 more)
prompts/: claude_master_prompt.md  (+1 more)
(+331 files in other folders)
